# pitsu

./: .gitignore  Cargo.toml  TODO
.cargo/: config.example.toml
local/: Cargo.toml  app.exe.manifest  build.rs
local/src/: cache.rs  colors.rs  config.rs  dialogue.rs  double_progress_bar.rs  main.rs  pitignore.rs
local/src/config/: mod.rs
remote/: Cargo.toml  schema.sql
remote/queries/: access.sql  files.sql  repository.sql  user.sql
remote/src/: cornucopia.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
