[package]
name = "pitsu"
version = "0.2.3"
edition = "2021"

[dependencies]
pitsu-lib = { path = "../shared" }
datalust_logger = { git = "https://github.com/Dissssy/datalust_logger" }
dirs = "6.0.0"
eframe = { version = "0.32.0", features = ["persistence"] }
egui_extras = { version = "0.32.0", features = ["all_loaders"] }
# egui_nerdfonts = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.109"
toml = "0.9.0"
lazy_static = "1.5.0"
anyhow = "1.0.98"
log = "0.4.27"
ehttp = { version = "0.5.0", features = ["json", "multipart"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
rfd = { version = "0.15.3", features = ["tokio"] }
env_logger = "0.11.8"
include-flate = "0.3.0"
image = "0.25.6"
resvg = "0.45.1"
clipboard-rs = "0.3.0"
open = "5.3.2"
colors-transform = "0.2.11"
self_update = "0.42.0"

[build-dependencies]
embed-resource = "3.0.5"
winresource = "0.1.23"
