[package]
name = "pitsu-lib"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full"] }
async-recursion = "1.1.1"
tempfile = "3.20.0"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
futures = "0.3.31"
tokio-rayon = "2.1.0"
rayon = "1.10.0"
